# by-framework-docs

./: .gitignore  README.md  docs-requirements.txt  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: index.md
docs/architecture/: data-flow.md  index.md  overview.md  plugin-system.md  protocol.md  redis-streams.md
docs/blog/: .authors.yml  archive.md  categories.md  index.md  tags.md
docs/blog/posts/: 解构Byclaw-code-agent.md
docs/guide/: client-guide.md  deployment.md  discovery-guide.md  getting-started.md  index.md  observability.md  plugin-guide.md  worker-guide.md  worker-management.md
docs/javascripts/: mermaid-zoom.js
docs/libs/: adk.md  history.md  index.md  langgraph.md  tracing.md
docs/modules/: client.md  context.md  discovery.md  index.md  registry.md  worker.md
docs/reference/: index.md
docs/reference/java/: api-client.md  api-context.md  api-plugin.md  api-protocol.md  api-worker.md
docs/reference/python/: api-client.md  api-context.md  api-plugin.md  api-protocol.md  api-worker.md
docs/reference/typescript/: api-client.md  api-context.md  api-plugin.md  api-protocol.md  api-worker.md
docs/reports/: deconstructing-byclaw.html
docs/resources/: faq.md  glossary.md
docs/samples/: basic.md  index.md  langgraph.md  multi-agent.md  plugin.md  streaming.md
docs/stylesheets/: mermaid-zoom.css  theme.css
java/: README.md  pom.xml
java/java-se-samples/: pom.xml
java/java-se-samples/src/main/java/com/beyonai/byframework/samples/examples/: AdvancedSubscriberExample.java  CancelTaskExample.java  CustomCommandExample.java  DemoWorker.java  DiscoveryHttpClientExample.java  DiscoveryNoLivenessExample.java  SendMessageExample.java  SendMessageRoutePolicyExample.java  SendStructuredMessageExample.java  ServiceDiscoveryExample.java  ServiceRegistryExample.java  ServiceRegistryNoHeartbeatExample.java
java/java-se-samples/src/main/resources/: gateway-config.properties
java/springboot-samples/: pom.xml
java/springboot-samples/src/main/java/com/beyonai/byframework/samples/springboot/: GatewayApplication.java
java/springboot-samples/src/main/java/com/beyonai/byframework/samples/springboot/config/: GatewayDiscoveryConfiguration.java
java/springboot-samples/src/main/java/com/beyonai/byframework/samples/springboot/controller/: TestController.java
java/springboot-samples/src/main/resources/: application.yml  gateway-config.properties
overrides/partials/: header.html
python/client/: .env.example  README.md  main.py  pyproject.toml  send_message_route_policy.py
python/discovery/: .env.example  README.md  consumer_example.py  discovery_http_client_example.py  discovery_http_client_no_health_check_example.py  discovery_http_client_upload_example.py  provider_example.py  provider_register_only_example.py  pyproject.toml
python/manager/: README.md  pyproject.toml  worker_admin.py
python/plugins/: .env.example  README.md  hot_reload_client.py  hot_reload_plugin.py  hot_reload_state.json  hot_reload_worker.py  logging_plugin.py  logging_worker.py  pyproject.toml
python/plugins/tests/: test_hot_reload_plugin.py
python/workers/adk-worker/: main.py  pyproject.toml
python/workers/agent-teams/: coder_team.py  main.py  orchestrator.py  pyproject.toml  research_team.py
python/workers/claude-agent/: .env.example  README.md  claude_agent_worker.py  pyproject.toml
python/workers/history-worker/: README.md  main.py  pyproject.toml
python/workers/history-worker/tests/: test_main.py
python/workers/langgraph-extension-worker/: .env.example  README.md  main.py  pyproject.toml  weather_agent.py
python/workers/langgraph-file-worker/: .env.example  main.py  prompting.py  pyproject.toml  test_prompting.py
python/workers/langgraph-multimodal-worker/: main.py  prompting.py  pyproject.toml  test_multimodal.py
python/workers/langgraph-native-trace-worker/: .env.example  main.py  pyproject.toml
python/workers/langgraph-worker/: .env.example  main.py  pyproject.toml
python/workers/multi-workers/: .env.example  README.md  byai_message_utils.py  critic_worker.py  main.py  orchestrator.py  plugin.py  poet_worker.py  pyproject.toml  sub_worker.py  translator_worker.py
python/workers/route-policy-worker/: README.md  main.py  orchestrator.py  pyproject.toml  wakeup_controller.py
python/workers/trace-demo-worker/: .env.example  external_plain_app_example.py  external_plain_app_example.ts  main.py  pyproject.toml
typescript/workers/langgraph-worker/: package-lock.json  package.json  tsup.config.ts
typescript/workers/langgraph-worker/src/: index.ts  run.ts  worker.ts
typescript/workers/pi-worker/: package-lock.json  package.json
typescript/workers/pi-worker/src/: index.ts  run.ts  worker.ts
typescript/workers/pi-worker/tests/: test_run.ts
