[project]
name = "by-framework-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "python/client",
    "python/workers/langgraph-worker",
    "python/workers/history-worker",
    "python/workers/adk-worker",
    "python/workers/claude-agent",
    "python/workers/multi-workers",
    "python/workers/agent-teams",
    "python/workers/langgraph-file-worker",
    "python/workers/langgraph-multimodal-worker",
    "python/workers/langgraph-extension-worker",
    "python/discovery",
    "python/plugins",
]

[tool.uv.sources]
by-framework = { path = "/Users/xiaozhongcheng/data/company/beyonai/by-framework-python", editable = true }
by-framework-langgraph = { path = "/Users/xiaozhongcheng/data/company/beyonai/by-framework-python/libs/by-framework-langgraph", editable = true }
by-framework-history-byclaw = { path = "/Users/xiaozhongcheng/data/company/beyonai/by-framework-python/libs/by-framework-history-byclaw", editable = true }
by-framework-history-postgres = { path = "/Users/xiaozhongcheng/data/company/beyonai/by-framework-python/libs/by-framework-history-postgres", editable = true }
