[project]
name = "by-framework-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langfuse>=4.3.1",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[tool.uv.workspace]
members = [
    "python/client",
    "python/workers/langgraph-worker",
    "python/workers/history-worker",
    "python/workers/adk-worker",
    "python/workers/claude-agent",
    "python/workers/multi-workers",
    "python/workers/agent-teams",
    "python/workers/langgraph-file-worker",
    "python/workers/langgraph-multimodal-worker",
    "python/workers/langgraph-extension-worker",
    "python/workers/route-policy-worker",
    "python/discovery",
    "python/plugins",
]