[project]
name = "agent-teams"
version = "0.1.0"
description = "Hierarchical Agent Teams implementation using by-framework and LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "by-framework",
    "langgraph>=1.1.3",
    "langchain-core>=1.2.22",
    "langchain-openai>=1.1.12",
]
