[project]
name = "history-worker"
version = "0.1.0"
description = "Sample by-framework LangGraph worker with pluggable history backends"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "by-framework",
    "by-framework-history-byclaw",
    "by-framework-history-postgres",
    "langgraph>=1.1.6",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.12",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
history-worker = "main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
