[project]
name = "langgraph-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "by-framework>=0.1.2",
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
by-framework = { path = "/Users/xiaozhongcheng/data/company/beyonai/byclaw-gateway-sdk-python" }
